--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -10,6 +10,46 @@
 Defaults
 */
 
+.bg-lucent-blue {
+    background-color: #1606FD;
+}
+
+p {
+    @apply leading-snug;
+    @apply mb-4;
+    @apply font-light;
+}
+
+h1 {
+    @apply text-4xl;
+    /* @apply .font-medium; */
+    @apply mt-3;
+    @apply mb-2 !important;
+}
+
+h2 {
+    @apply text-2xl;
+    @apply mt-3;
+    @apply mb-2 !important;
+}
+
+h3 {
+    @apply text-xl;
+    @apply mt-3;
+    @apply mb-2 !important;
+}
+
+h4 {
+    @apply text-lg;
+    @apply mt-3;
+    @apply mb-2 !important;
+}
+
+strong, em {
+    font-weight: 600;
+}
+
+
 html {
     font-family: Bicyclette, Helvetica, sans-serif;
     font-size: 26px;
@@ -17,9 +57,6 @@ html {
 
 .header {
     background-image: linear-gradient(135deg, #e71897 0%, #3e4ba7 100%);
-}
-
-.header-middle {
 }
 
 @media (max-width: 640px) {
