--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -4,7 +4,26 @@
 @tailwind components;
 @tailwind utilities;
 
-@import "./fonts.css";
+@font-face {
+    font-family: Bicyclette;
+    src: url("fonts/Kostic-Bicyclette-Light.otf") format("opentype");
+    font-weight: 300;
+    /* font-style: light; */
+}
+
+@font-face {
+    font-family: Bicyclette;
+    src: url("fonts/Kostic-Bicyclette-Regular.otf") format("opentype");
+    font-weight: 400;
+    /* font-style: regular; */
+}
+
+@font-face {
+    font-family: Bicyclette;
+    src: url("fonts/Kostic-Bicyclette-Bold.otf") format("opentype");
+    font-weight: 700;
+    /* font-style: bold; */
+}
 
 /*
 Defaults
@@ -65,8 +84,8 @@ html {
     }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 400px) {
     html {
-        font-size: 18px;
+        font-size: 16px;
     }
 }
